styles.css
*, ::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}
h2 {
    font-size: 30px;
    font-weight: 700;
    text-decoration: underline;
    color: #001428;
    margin: 20px 10px;
}
h1 {
    font-size: 36px;
    font-weight: 900;
    margin: 20px 10px;
    color: #ffff;
    text-align: center;
}
li {
    margin: 10px 0;
    margin-left: 50px;
}
section:not(:last-of-type)::after {
    display: inline-block;
    content: '';
    width: 100%;
    height: 2px;
    position: relative;
    top: 0;
    border-top: 2px solid black;
    opacity: 0.1;
}
p {
    margin: 10px;
    opacity: 0.9;
}
code {
    display: inline-block;
    background-color: #001428;
    color: #ffff;
    padding: 10px 20px;
    border-radius: 10px;
    margin-left: 10px;
}

#main-doc {
    margin-left: 320px;
    margin-right: 20px;
    max-width: 1000px;
}

#navbar {
    position: fixed;
    top: 0;
    height: 100%;
    width: 300px;
    background-color: #001428;
}
#navbar ul {
    list-style: none;
}
#navbar a { 
    color: #ffff;
    text-decoration: none;
    cursor: pointer;
    display: block;
    padding: 20px;
    border-top: 1px solid #ffff;
    transition: text-indent 0.3s ease-in-out;
}
#navbar a:is(:first-of-type) {
    border-top: 2px solid #ffff;
}
#navbar a:hover {
    color: orangered;
    font-weight: 700;
    text-indent: 5px;
}
footer a:hover {
    color: aqua;
}
footer a {
    text-decoration: none;
    color: orangered; 
    font-weight: 700;
}
#navbar li {
    margin: 0;
}

footer {
    position: absolute;
    text-align: center;
    padding: 20px;
    background-color: #001428;
    color: #ffff;
    width: 100%;
    left: 0;
}

@media screen and (max-width: 815px) {
    body {
        flex-direction: column;
    }
    #navbar {
        position: relative;
        width: 100%;
        height: auto;
        padding-bottom: 20px;;
    }
    #navbar ul {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        justify-content: center;
        flex: 1;
        gap: 30px;
    }

    #navbar a {
        border-top: none;
        padding: 0;
        
    }
    #main-doc {
        width: 100%;
        margin: 0;
    }
    h1 {
        margin-top: 0;
        padding-top: 10px;
    }
    #navbar a:hover {
        text-indent: 0;
    }
}

